# DashKing

./: .gitgnore  CMakeLists.txt  Collectible.cpp  Collectible.h  Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  MainMenu.cpp  MainMenu.h  Map.cpp  Map.h  MapsConnector.cpp  MapsConnector.h  NPC.cpp  NPC.h  Platform.cpp  Platform.h  Player.cpp  Player.h  PlayerAnimations.cpp  PlayerAnimations.h  PlayerInterface.cpp  PlayerInterface.h  README.md  Scene.cpp  Scene.h  Shop.cpp  Shop.h  Spike.cpp  Spike.h  Utils.cpp  Utils.h  main.cpp  maps.txt  player.cpp  player.h
